--- a/assets/style.css
+++ b/assets/style.css
@@ -92,4 +92,54 @@ li {
     color: white;
 }
 
-/* add media queries 
+#createDiv{
+    margin-top:20px;
+    border-top:1px solid lightgray;
+}
+
+/*media queries*/
+@media screen and (max-width: 786px) {
+    /* Resized content to fit 786px  */
+    body {
+        max-width: 786px;
+    }
+/* Resized main-content to fit 786px  */
+#wrapper {
+    position: absolute;
+    left: 20%;
+}
+
+a {
+    margin-left: 20%;
+}
+    #goBack {
+        
+        position: relative;
+        left: 55%;
+    }
+
+    #clear {
+        
+        position: relative;
+        right: 5%;
+        
+    }
+}
+    
+/* A Media Query max-width: 640px */
+@media screen and (max-width: 640px) {
+ /* Resized content to fit 640px  */
+ body {
+        min-width: 640px;
+    }
+/* Resized main-content to fit 640px  */
+#wrapper {
+    position: absolute;
+    left: 10%;
+}
+  a {
+      margin-left: 10%;
+  }
+
+ 
+}
